--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,4 +1,22 @@
 <h1>Entries#new</h1>
 
-<p>The new entry form will go here later</p>
-<p>Find me in app/views/entries/new.html.erb</p>
+<%= form_for @entry do |f| %>
+
+  <p>
+    <%= f.label :word %>
+    <%= f.text_field :word %>
+  </p>
+
+  <p>
+    <%= f.label :definition %>
+    <%= f.text_field :definition %>
+  </p>
+
+  <p>
+    <%= f.label :language %>
+    <%= f.text_field :language %>
+  </p>
+
+    <%= f.submit %>
+
+<% end %>
