--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Entries#index</h1>
-<p>Find me in app/views/entries/index.html.erb</p>
+<h1>Dictionary</h1>
+
+<% @entries.each do |entry| %>
+
+  <h1> <%= link_to entry.word, entry_url(entry.id) %></h1>
+
+<% end %>
