--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,22 +1,3 @@
-<h1>Entries#new</h1>
+<h1>New Entry</h1>
 
-<%= form_for @entry do |f| %>
-
-  <p>
-    <%= f.label :word %>
-    <%= f.text_field :word %>
-  </p>
-
-  <p>
-    <%= f.label :definition %>
-    <%= f.text_field :definition %>
-  </p>
-
-  <p>
-    <%= f.label :language %>
-    <%= f.text_field :language %>
-  </p>
-
-    <%= f.submit %>
-
-<% end %>
+<%= render 'entry_form', entry: @entry %>
