--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -3,4 +3,4 @@
 <h4>Definition: <%= @entry.definition %></h4>
 <h4>Language: <%= @entry.language %></h4>
 
-<%= link_to 'Edit', edit_entry_url %>
+<%= link_to 'Edit', edit_entry_url %> | <%= link_to 'Delete', entry_url(@entry), method: :delete, data: {confirm: "Are you sure you want to delete the word '#{@entry.word}'? This cannot be undone!"} %>
